tests/negative/gold/lambda2_test.gold
tests/negative/lambda2_test.toit:5:5: error: Unresolved identifier: 'unresolved'
    unresolved
    ^~~~~~~~~~
tests/negative/lambda2_test.toit:6:15: error: Unresolved identifier: 'unresolved'
  lambda.call unresolved
              ^~~~~~~~~~
Compilation failed.
